2003-03-22  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/elf/ldsodefs.h: Add mips-specific elf64 relocation
	data structures and macros.  Protect from multiple inclusion.

	* sysdeps/mips/dl-machine.h (ELF_MIPS_GNU_GOT1_MASK): Fix harmless
	typo in #if test.

2003-03-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/fpu/libm-test-ulps: Update.

	* math/libm-test.inc (tgamma_test): Recompute some constants with
	36 digits precision.
	(lgamma_test): Likewise.
	(ccos_test): Likewise.
	(ccosh_test): Likewise.
	(clog10_test): Likewise.
	(csin_test): Likewise.
	(csinh_test): Likewise.
	(ctan_test): Likewise.
	(ctanh_test): Likewise.

2003-03-19  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Regenerated.

2003-03-21  Roland McGrath  <roland@redhat.com>

	* sysdeps/i386/i486/bits/atomic.h (atomic_bit_set): Use "ir"
	constraint to permit non-constant BIT argument.
	(atomic_bit_test_set): Likewise.
	* sysdeps/x86_64/bits/atomic.h (atomic_bit_test_set): Likewise.
	(atomic_bit_set): Likewise.  Use 1UL in case that BIT might be >= 32.
	For quadword case, use "i" constraint if __builtin_constant_p and < 32
	or "r" constraint otherwise.

	* configure.in: Move AC_PROG_CC and other program-finding before all
	the version checks.
	* configure: Regenerated.

2003-03-21  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/mips64/memcpy.S: Fix porting bug that broke
	unaligned copying of 8-15 bytes.  From Chris Demetriou
	<cgd@broadcom.com>.  Fix label names.
	* sysdeps/mips/mips64/memset.S: Fix label names.  Make similar
	change as to memcpy.S.
	* sysdeps/mips/memcpy.S: Formatting changes.
	* sysdeps/mips/memset.S: Likewise.

2003-03-21  Roland McGrath  <roland@redhat.com>

	* sysdeps/arm/sysdep.h (CALL_MCOUNT): Add trailing semicolon.

2003-03-21  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/mips64/memcpy.S, sysdeps/mips/mips64/memset.S: New.
	* sysdeps/mips/memcpy.S, sysdeps/mips/memset.S: Update comments.
